--- a/Particle_Ground_Station/project.properties
+++ b/Particle_Ground_Station/project.properties
@@ -2,3 +2,4 @@ name=Particle_Ground_Station
 dependencies.XBee=0.0.10
 dependencies.JsonParserGeneratorRK=0.1.5
 dependencies.Adafruit_MQTT=1.6.1
+dependencies.Adafruit_SSD1306=0.0.2
